# conf-edit

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  conf-edit.spec  pyproject.toml
.impeccable/: design.json
docs/superpowers/plans/: 2026-07-10-configuration-object-manager.md
docs/superpowers/specs/: 2026-07-10-configuration-object-manager-design.md
examples/: models.json  schema.sql
scripts/: build.ps1  vendor_codemirror.py
src/conf_edit/: __init__.py  __main__.py  config.py  logging_config.py
src/conf_edit/desktop/: __init__.py  controller.py  server.py  view.py
src/conf_edit/domain/: __init__.py  errors.py  models.py
src/conf_edit/parsers/: __init__.py  json_models.py  sql_models.py
src/conf_edit/services/: catalog_service.py  editor_service.py  history_service.py
src/conf_edit/storage/: __init__.py  catalog_repository.py  database.py  file_gateway.py  revision_repository.py  settings_repository.py
src/conf_edit/templates/: index.html
src/conf_edit/web/: app.py  (+4 more)
tests/: conftest.py
tests/desktop/: test_controller.py  test_logging_config.py  test_main.py  test_server.py  test_view.py
tests/e2e/: conftest.py  test_web_workflows.py
tests/services/: test_catalog_service.py  test_editor_service.py  test_history_service.py
tests/storage/: test_catalog_repository.py  test_database.py  test_revision_repository.py  test_settings_repository.py
tests/unit/: test_config.py  test_file_gateway.py  test_json_models.py  test_package_resources.py  test_sql_models.py
tests/web/: conftest.py  test_files_api.py  test_history_api.py  test_security.py
(+7 files in other folders)
