[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conf-edit"
version = "0.1.0"
description = "LAN configuration object manager for JSON model arrays and MySQL schema files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask==3.1.3",
  "waitress==3.0.2",
  "sqlglot==30.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6,<8",
  "playwright>=1.52,<2",
  "pyinstaller>=6.14,<7",
]

[project.scripts]
conf-edit = "conf_edit.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

